Trying to add support for 2012R2

--- a/bootstrappers/windows_omnibus.erb
+++ b/bootstrappers/windows_omnibus.erb
@@ -59,6 +59,10 @@ goto architecture
 set MACHINE_OS=2012
 goto architecture
 
+:Version6.3
+set MACHINE_OS=2012r2
+goto architecture
+
 :architecture
 
 goto Architecture%PROCESSOR_ARCHITECTURE%
