--- a/bootstrappers/windows_omnibus.erb
+++ b/bootstrappers/windows_omnibus.erb
@@ -62,6 +62,15 @@ goto architecture
 :Version6.3
 set MACHINE_OS=2012r2
 goto architecture
+ 
+:Version10.0
+set MACHINE_OS=2016
+goto architecture
+
+rem Currently Windows Server 2016 R2 is treated as equivalent to Windows Server 2016
+:Version10.1
+goto Version10.0
+ 
 
 :architecture
 
